--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+
 <html>
   <head>
     <title>RailsTaskManager</title>
+    <link rel="stylesheet" href="application.scss">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
